--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   align-items: center;
   flex-direction: column;
   animation: fadeIn 2s ease-in-out;
-  background-color: #ffffff; /* fallback para imagen */
+  background-color: #b38b00; /* color mostaza oscuro como fondo */
 }
 
 /* Ocultamos el mensaje */
